[SNAP-606] Support for "spark.snappydata" properties (#231)
* [SNAP-606] Adding support for "spark.snappydata" properties

  - Changed io.snappydata.Property into an enum with a Value class that allows an
    alternative name (prefixed with "spark.") for each of the properties
  - Updated LeadImpl, ExternalStoreUtils etc to make use of above and allow for
    "spark." prefix when filtering properties; changed filter+map to collect calls
    to simplify and refactored common code a bit into ServiceUtils
  - Renamed some classes from '*Shell*' to '*Split*' as per agreed convention
  - Increasing the default DECIMAL/NUMERIC (precision,scale) to (38,18)
    as per usual convention in most databases
  - Fixing test failures
  - Correcting setting of property defaults in LeadImpl
  - Review comment: fail if both "snappydata.*" and "spark.snappydata.*" properties are set

* [SNAP-753] Reorganize tests-dunits to core+cluster (#232)
  - Removed separate tests/dunit project and instead moved into core and cluster
  - Added "dunitTest" tasks for above which run the *DUnitTest test classes with appropriate parameters
  - Split the ExternalShellDUnitTest into SplitClusterDUnitTest and SnappyResourceEventsDUnitTest
    where former is in core and runs the split cluster against stock Spark while latter against snappy-spark;
    the test in core starts a separate snappy embedded cluster and uses JDBC connection into it to do the
    operations (and the new ComplexTypeSerializer added for serialization)
  - Added target to download upstream spark distribution and unpack in dist/ (only once) for above test in core
  - Removing *TestBase and TestFailure from suite
  - Separating out dunit binary/html output into project specific directories

* [SNAP-750] Serialization of complex types from JDBC (#233)
  - Added new callback class implementation ComplexTypeSerializerImpl to allow serializing ARRAY, MAP, STRUCT
    types over a JDBC client connection that is c