@@ -17,14 +17,14 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath "com.github.maiflai:gradle-scalatest:0.10"
-    classpath "org.github.ngbinh.scalastyle:gradle-scalastyle-plugin_2.10:0.8.2"
+    classpath 'com.github.maiflai:gradle-scalatest:0.11'
+    classpath 'org.github.ngbinh.scalastyle:gradle-scalastyle-plugin_2.10:0.8.2'
     classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
   }
 }
 
 allprojects {
-  // We want to see all test results.  This is equivalatent to setting --continue
+  // We want to see all test results.  This is equivalent to setting --continue
   // on the command line.
   gradle.startParameter.continueOnFailure = true
 
@@ -83,6 +83,7 @@ allprojects {
     scalaBinaryVersion = '2.10'
     scalaVersion = scalaBinaryVersion + '.6'
     sparkVersion = '1.6.1'
+    sparkDistName = "spark-${sparkVersion}-bin-hadoop2.4"
     log4jVersion = '1.2.17'
     slf4jVersion = '1.7.12'
     junitVersion = '4.11'
@@ -103,6 +104,8 @@ allprojects {
   ext {
     testResultsBase = "${rootProject.buildDir}/tests/snappy"
     snappyProductDir = "${rootProject.buildDir}/snappy"
+    sparkDistDir = "${rootProject.projectDir}/dist"
+    sparkProductDir = "${sparkDistDir}/${sparkDistName}"
   }
 }
 
@@ -160,9 +163,17 @@ task cleanDUnit << {
   def workingDir = "${testResultsBase}/dunit"
   delete workingDir
   file(workingDir).mkdirs()
+  // clean spark cluster directories
+  delete "${snappyProductDir}/work", "${snappyProductDir}/logs"
+  delete "${sparkProductDir}/work", "${sparkProductDir}/logs"
 }
 task cleanAllReports << {
   def workingDir = "${testResultsBase}/combined-reports"
+  delete workingDir
+  file(workingDir).mkdirs()
+}
+task cleanQuickstart << {
+  def workingDir = "${testResultsBase}/quickstart"
   delete workingDir
   file(workingDir).mkdirs()
 }
@@ -199,8 +210,8 @@ subprojects {
 
     List<String> suites = []
     extensions.add(com.github.maiflai.ScalaTestAction.SUITES, suites)
-    extensions.add("suite", { String name -> suites.add(name) } )
-    extensions.add("suites", { String... name -> suites.addAll(name) } )
+    extensions.add('suite', { String name -> suites.add(name) } )
+    extensions.add('suites', { String... name -> suites.addAll(name) } )
 
     // running a single scala suite
     if (rootProject.hasProperty('singleSuite')) {
@@ -218,11 +229,36 @@ subprojects {
     jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:+CMSClassUnloadingEnabled',  '-XX:MaxPermSize=384m', '-ea'
     testLogging.exceptionFormat = 'full'
 
+    include '**/*.class'
+    exclude '**/*DUnitTest.class'
+    exclude '**/*TestBase.class'
+
     workingDir = "${testResultsBase}/junit"
 
     binResultsDir = file("${workingDir}/binary/${project.name}")
     reports.html.destination = file("${workingDir}/html/${project.name}")
     reports.junitXml.destination = file(workingDir)
+  }
+  task dunitTest(type: Test) {
+    dependsOn ':cleanDUnit'
+    dependsOn ':product'
+    maxParallelForks = 1
+    minHeapSize '128m'
+    maxHeapSize '1g'
+
+    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-XX:MaxPermSize=384m', '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC', '-XX:CMSInitiatingOccupancyFraction=50', '-XX:+CMSClassUnloadingEnabled', '-ea']
+
+    include '**/*DUnitTest.class'
+    exclude '**/*Suite.class'
+
+    workingDir = "${testResultsBase}/dunit"
+
+    binResultsDir = file("${workingDir}/binary/${project.name}")
+    reports.html.destination = file("${workingDir}/html/${project.name}")
+    reports.junitXml.destination = file(workingDir)
+
+    systemProperties 'java.net.preferIPv4Stack': 'true',
+                     'SNAPPY_HOME': snappyProductDir
   }
 
   gradle.taskGraph.whenReady({ graph ->
@@ -246,6 +282,7 @@ subprojects {
         }
 
         environment 'SNAPPY_HOME': snappyProductDir,
+          'APACHE_SPARK_HOME': sparkProductDir,
           'SNAPPY_DIST_CLASSPATH': "${sourceSets.test.runtimeClasspath.asPath}"
 
         def eol = System.getProperty('line.separator')
@@ -372,10 +409,10 @@ subprojects {
           beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
           repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-            authentication(userName: ossrhUsername, password: ossrhPassword)
+            authentication(userName: propOrDefault('ossrhUsername'), password: propOrDefault('ossrhPassword'))
           }
           snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-            authentication(userName: ossrhUsername, password: ossrhPassword)
+            authentication(userName: propOrDefault('ossrhUsername'), password: propOrDefault('ossrhPassword'))
           }
 
           pom.project {
@@ -413,16 +450,16 @@ subprojects {
 }
 
 task publishLocal {
-  dependsOn subprojects.findAll { p -> !p.name.contains('tests-dunit') &&
-    p.name != 'gemfirexd-native' && p.name != 'gemfirexd-prebuild' &&
+  dependsOn subprojects.findAll { p -> p.name != 'gemfirexd-native' &&
+    p.name != 'gemfirexd-prebuild' &&
     p.name != 'gemfirexd' }.collect {
       it.getTasksByName('install', false).collect { it.path }
   }
 }
 
 task publishMaven {
-  dependsOn subprojects.findAll { p -> !p.name.contains('tests-dunit') &&
-    p.name != 'gemfirexd-native' && p.name != 'gemfirexd-prebuild' &&
+  dependsOn subprojects.findAll { p -> p.name != 'gemfirexd-native' &&
+    p.name != 'gemfirexd-prebuild' &&
     p.name != 'snappy-store' && p.name != 'gemfirexd' }.collect {
       it.getTasksByName('uploadArchives', false).collect { it.path }
   }
@@ -643,19 +680,20 @@ def copyTestsCommonResources(def bdir) {
   }
 }
 
-def runScript(def execName, def param) {
-def stdout = new ByteArrayOutputStream()
-    exec{
-      executable "${execName}"
-      args  (param)
-      standardOutput = stdout;
-    }
+def runScript(def execName, def workDir, def param) {
+  def stdout = new ByteArrayOutputStream()
+  exec {
+    executable "${execName}"
+    workingDir = workDir
+    args (param)
+    standardOutput = stdout
+  }
   return "$stdout"
 }
 
-def runSQLScript(def fileName) {
+def runSQLScript(def fileName, def workDir) {
   println("Executing ${fileName}")
-  def queryoutput = runScript("${snappyProductDir}/bin/snappy-shell",
+  def queryoutput = runScript("${snappyProductDir}/bin/snappy-shell", workDir,
           ["run", "-file=${snappyProductDir}/quickstart/scripts/${fileName}"]);
   println "${queryoutput}"
   if (queryoutput.contains("ERROR") || queryoutput.contains("Failed")) {
@@ -669,10 +707,10 @@ def writeToFile(def fileName) {
   }
 }
 
-def runSubmitQuery(def jobName, def appName) {
+def runSubmitQuery(def jobName, def appName, def workDir) {
   println "Running job $jobName"
   def exampleArchiveName = "quickstart-${version}.jar"
-  def submitjobairline = runScript("${snappyProductDir}/bin/snappy-job.sh",
+  def submitjobairline = runScript("${snappyProductDir}/bin/snappy-job.sh", workDir,
       ["submit", "--lead", "localhost:8090", "--app-name", appName + System.currentTimeMillis(),
        "--class", jobName, "--app-jar",
        "${snappyProductDir}/lib/${exampleArchiveName}"]);
@@ -696,7 +734,7 @@ def runSubmitQuery(def jobName, def appName) {
   while (status == "RUNNING") {
     Thread.sleep(3000)
     def statusjobairline = runScript("${snappyProductDir}/bin/snappy-job.sh",
-        ["status", "--lead", "localhost:8090", "--job-id", "${jobid}"]);
+        workDir, ["status", "--lead", "localhost:8090", "--job-id", "${jobid}"]);
     println "${statusjobairline}"
 
     def statusjson = new JsonSlurper().parseText("${statusjobairline}")
@@ -713,42 +751,49 @@ def runSubmitQuery(def jobName, def appName) {
   }
 }
 
-task runQuickstart(dependsOn: product) {
+task runQuickstart {
+  dependsOn cleanQuickstart
+  dependsOn product
   mustRunAfter 'buildAll'
   def exampleArchiveName = "quickstart-${version}.jar"
+  def workingDir = "${testResultsBase}/quickstart"
   doLast {
     try {
       writeToFile("${snappyProductDir}/conf/servers")
-      def startoutput = runScript("${snappyProductDir}/sbin/snappy-start-all.sh", []);
+      def startoutput = runScript("${snappyProductDir}/sbin/snappy-start-all.sh",
+          workingDir, []);
       println "${startoutput}"
       if (!startoutput.contains("Distributed system now has 4 members")) {
         throw new GradleException("Failed to start Snappy cluster")
       }
-      runSQLScript("create_and_load_column_table.sql")
+      runSQLScript("create_and_load_column_table.sql", workingDir)
 
-      runSQLScript("create_and_load_row_table.sql")
+      runSQLScript("create_and_load_row_table.sql", workingDir)
       
-      runSQLScript("create_and_load_sample_table.sql")
+      runSQLScript("create_and_load_sample_table.sql", workingDir)
 
-      runSQLScript("status_queries.sql")
+      runSQLScript("status_queries.sql", workingDir)
 
-      runSQLScript("olap_queries.sql")
+      runSQLScript("olap_queries.sql", workingDir)
 
-      runSQLScript("oltp_queries.sql")
+      runSQLScript("oltp_queries.sql", workingDir)
 
-      runSQLScript("olap_queries.sql")
+      runSQLScript("olap_queries.sql", workingDir)
       
-      runSQLScript("olap_approx_queries.sql")
+      runSQLScript("olap_approx_queries.sql", workingDir)
 
-      runSubmitQuery("io.snappydata.examples.CreateAndLoadAirlineDataJob", "createJob")
+      runSubmitQuery("io.snappydata.examples.CreateAndLoadAirlineDataJob",
+          "createJob", workingDir)
 
-      runSubmitQuery("io.snappydata.examples.AirlineDataJob", "processjob")
+      runSubmitQuery("io.snappydata.examples.AirlineDataJob",
+          "processjob", workingDir)
 
-      def startSparkResult = runScript("${snappyProductDir}/sbin/start-all.sh", [])
+      def startSparkResult = runScript("${snappyProductDir}/sbin/start-all.sh",
+          workingDir, [])
       println "${startSparkResult}"
 
       def hostname = "hostname".execute().text.trim()
-      def airlineappresult = runScript("${snappyProductDir}/bin/spark-submit",
+      def airlineappresult = runScript("${snappyProductDir}/bin/spark-submit", workingDir,
               ["--class", "io.snappydata.examples.AirlineDataSparkApp", "--master", "spark://${hostname}:7077",
                "--conf", "snappydata.store.locators=localhost:10334", "--conf", "spark.ui.port=4041",
                "${snappyProductDir}/lib/${exampleArchiveName}"]);
@@ -760,7 +805,7 @@ task runQuickstart(dependsOn: product) {
 
       def examplesdir = project(":snappy-examples_${scalaBinaryVersion}")
 
-      def airlinepythonappresult = runScript("${snappyProductDir}/bin/spark-submit",
+      def airlinepythonappresult = runScript("${snappyProductDir}/bin/spark-submit", workingDir,
           ["--master", "spark://${hostname}:7077", "--conf", "snappydata.store.locators=localhost:10334",
            "--conf", "spark.ui.port=4042", "${examplesdir.buildDir}/AirlineDataPythonApp.py"]);
 
@@ -770,8 +815,8 @@ task runQuickstart(dependsOn: product) {
       }
 
     } finally {
-      println runScript("${snappyProductDir}/sbin/snappy-stop-all.sh", []);
-      println runScript("${snappyProductDir}/sbin/stop-all.sh", []);
+      println runScript("${snappyProductDir}/sbin/snappy-stop-all.sh", workingDir, []);
+      println runScript("${snappyProductDir}/sbin/stop-all.sh", workingDir, []);
       def conffile = new File("${snappyProductDir}/conf/servers")
       if (conffile.exists())
         conffile.delete()
@@ -782,7 +827,6 @@ task runQuickstart(dependsOn: product) {
 task copyResourcesAll << {
   copyTestsCommonResources(project(":snappy-core_${scalaBinaryVersion}").buildDir)
   copyTestsCommonResources(project(":snappy-cluster_${scalaBinaryVersion}").buildDir)
-  copyTestsCommonResources(project(":tests-dunit_${scalaBinaryVersion}").buildDir)
   if (new File(rootDir, 'aqp/build.gradle').exists()) {
     copyTestsCommonResources(project(":snappy-aqp_${scalaBinaryVersion}").buildDir)
   }
@@ -800,8 +844,7 @@ task buildAll {
 }
 task checkAll {
   dependsOn ":snappy-core_${scalaBinaryVersion}:check",
-            ":snappy-cluster_${scalaBinaryVersion}:check",
-            ":tests-dunit_${scalaBinaryVersion}:test"
+            ":snappy-cluster_${scalaBinaryVersion}:check"
   if (new File(rootDir, 'aqp/build.gradle').exists()) {
     dependsOn ":snappy-aqp_${scalaBinaryVersion}:check"
   }
